Check in changes.

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        <b>[1X Speed]</b> DexWrist is capable of performing highly dynamic tasks requiring human-level wrist dexterity.
+        <b>[1X Speed]</b> DexWrist performs highly dynamic tasks with human-level wrist dexterity.
       </h2>
     </div>
   </div>
@@ -190,14 +190,14 @@
         <!-- Your image here -->
         <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          First image description.
+          Add mechanical design gif or image here @Martin
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
         <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          Second image description.
+          Dexwrist allows for efficient teleopeation in constrained environments, leading to a more scalable data collection process and demonstrations with shorter trajectories, on average.
         </h2>
       </div>
       <div class="item">
