Add jquery animations.

--- a/dp_chart.html
+++ b/dp_chart.html
@@ -116,10 +116,10 @@
             <div class="video-section">
                 <div class="video-container">
                     <video autoplay muted loop playsinline>
-                        <source src="agilex_default_wrist.mp4" type="video/mp4">
+                        <source src="static/videos/stock_agilex_default_dp.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="speed-indicator">4x</div>
+                    <div class="speed-indicator">1x</div>
                 </div>
                 <div class="video-caption">AgileX + Default Wrist</div>
             </div>
@@ -133,10 +133,10 @@
             <div class="video-section">
                 <div class="video-container">
                     <video autoplay muted loop playsinline>
-                        <source src="agilex_dexwrist.mp4" type="video/mp4">
+                        <source src="static/videos/dexwrist_constrained.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="speed-indicator">4x</div>
+                    <div class="speed-indicator">1x</div>
                 </div>
                 <div class="video-caption">AgileX + DexWrist (Ours)</div>
             </div>
