--- a/dp_success.html
+++ b/dp_success.html
@@ -261,7 +261,7 @@
         <h1 class="chart-title">Diffusion Policy Success Rate Comparison</h1>
 
         <div class="chart">
-            <div class="y-axis-label">Success Rate (%)</div>
+            <div class="y-axis-label">SR (%)</div>
             <div class="y-axis">
                 <span>100</span>
                 <span>80</span>
