--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+      .speed-indicator {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: rgba(0,0,0,0.7);
+            color: white;
+            padding: 4px 8px;
+            border-radius: 12px;
+            font-size: 12px;
+            font-weight: bold;
+        }
+  </style>
+
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
@@ -143,6 +157,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
+
       <video poster="" id="tree" autoplay muted loop height="100%">
         <!-- Your video here -->
         <source src="static/videos/dexwrist_trimmed.mp4"
@@ -183,7 +198,8 @@
 
 <!-- Image carousel -->
 <section class="hero is-small">
-  <iframe src="dp_chart.html" width="100%" height="700px" frameborder="0"></iframe>
+  <div class="hero-body"></div>
+  <iframe src="dp_chart.html" width="100%" height="700px" frameborder="0" scrolling="no"></iframe>
  </section>
 <!-- End image carousel -->
 
