replace conference name with under review

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <img src="static/images/mit.jpg" alt="MIT Logo" class="affiliation-logo" style="height: 1.5vw; min-height: 12px; max-height: 32px;">
                         <span>MIT<sup>1</sup></span>
                       </div>
-                      CoRL 2025 (Under Review)
+                      (Under Review)
                     </span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
