--- a/index.html
+++ b/index.html
@@ -216,7 +216,12 @@
         <h2 class="title is-3">Why DexWrist?</h2>
         <div class="content has-text-justified">
           <p>
-            DexWrist makes constrained, dynamic manipulation tasks possible on a wide range of robotic arms. It is designed to be close to the functional capabilities of the human wrist, achieving mechanical compliance and a greater workspace compared to existing robotic wrist designs. This allows for faster teleoperation, more scalable data collection, and easier policy learning. The design also enables torque transparency and easily simulatble kinematics, making it suitable for both real-world and simulated environments.
+            <ul>
+              <li>Enables constrained, dynamic manipulation tasks on any robot arm</li>
+              <li>Torque transparency and easily simulatable kinematics enables dynamic policy learning</li>
+              <li>Facilitates faster teleoperation for more scalable data collection</li>
+              <li>Reduces trajectory lengths, making policy learning more efficient</li>
+            </ul>
           </p>
         </div>
       </div>
@@ -237,7 +242,7 @@
         <div class="explainimg">
           <video poster="" id="video1" autoplay muted loop height="100%">
             Your video file here
-            <source src="static/videos/wristanimation.mp4"
+            <source src="static/videos/WristAnimation.mp4"
             type="video/mp4">
           </video>
         </div>
@@ -259,7 +264,7 @@
           </video>
         </div>
 
-        <h2 class="explaintext">[1x Speed] Finally, DexWrist has a large (+/-40 F/E, R/U) workspace and fits on most commercial robotic arms (AgileX shown). This makes fast, dynamic tasks possible on any arm.</h2>
+        <h2 class="explaintext">[1x Speed] Finally, DexWrist has a large workspace and fits on most commercial robotic arms (AgileX shown). This makes fast, dynamic tasks possible on any arm.</h2>
 
         
         </div>
