revert under review.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <img src="static/images/mit.jpg" alt="MIT Logo" class="affiliation-logo" style="height: 1.5vw; min-height: 12px; max-height: 32px;">
                         <span>MIT<sup>1</sup></span>
                       </div>
-                      CoRL 2025 (Under Review)
+                      (Under Review)
                     </span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
@@ -248,7 +248,7 @@
         </div>
 
         <h2 class="explaintext">A novel 2-DOF Parallel Kinematic Mechanism (PKM) achieves <b>human-like kinematics</b> while maintaining a <b>one-to-one mapping</b> between the two actuators and each of their DOF, <b>making teleop and policy learning easier</b>. The final DOF is achieved by mounting the wrist to a motor.</h2>
-        
+
         <div class="explainimg">
           <img src="static/images/gearboxregular.png">
           <img src="static/images/gearboxexploded.png">
@@ -266,7 +266,7 @@
 
         <h2 class="explaintext">[1x Speed] Finally, DexWrist has a large workspace and fits on most commercial robotic arms (AgileX shown). This makes fast, dynamic tasks possible on any arm.</h2>
 
-        
+
         </div>
       </div>
     </div>
