--- a/index.html
+++ b/index.html
@@ -200,20 +200,20 @@
     <div class="hero-body">
       <!-- Section Title -->
       <h2 class="title is-4 has-text-centered heading-fixed">
-        More intuitive and scalable teleoperation in constrained, human-centric environments with DexWrist
+        More efficient and intuitive teleoperation in constrained, human-centric environments
       </h2>
 
       <div style="display: flex; align-items: flex-start; gap: 10px; flex-wrap: wrap;">
         <!-- Left side - image with caption -->
         <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center;">
-          <img src="static/images/reset_fitted_background_is-light.png" alt="Left Image" style="width: 80%; max-width: 300px; height: auto;">
-          <p class="has-text-centered" style="margin-top: 15px; font-size: 12px; color: #666;">Fewer resets and less overall teleop time --> more scalable.</p>
+          <img src="static/images/reset_fitted_background_is-light.png" alt="Left Image" style="width: 80%; max-width: 400px; height: auto;">
+          <p class="has-text-centered" style="margin-top: 15px; font-size: 12px; color: #666;">More efficient: Fewer environment resets required and less overall human teleoperator time in constrained spaces.</p>
         </div>
 
         <!-- Right side - image with caption -->
         <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center;">
-          <img src="static/images/transparent_teleop_figure.png" alt="Right Image" style="width: 80%; max-width: 300px; height: auto;">
-          <p class="has-text-centered" style="margin-top: 15px; font-size: 12px; color: #666;">DexWrist's human-like kinematics and design collects shorter, more natural manipulation trajectories in constrained, human-centric environments.</p>
+          <img src="static/images/transparent_teleop_figure.png" alt="Right Image" style="width: 80%; max-width: 400px; height: auto;">
+          <p class="has-text-centered" style="margin-top: 15px; font-size: 12px; color: #666;">More intuitive: DexWrist's human-like kinematics and design collect shorter trajectorie and more natural behavior for manipulation in constrained, human-centric environments.</p>
         </div>
       </div>
     </div>
