--- a/index.html
+++ b/index.html
@@ -206,14 +206,14 @@
       <div style="display: flex; align-items: flex-start; gap: 10px; flex-wrap: wrap;">
         <!-- Left side - image with caption -->
         <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center;">
-          <img src="static/images/reset_fitted_background_is-light.png" alt="Left Image" style="width: 80%; max-width: 400px; height: auto;">
+          <img src="static/images/reset_fitted_background_is-light.png" alt="Left Image" style="width: 80%; max-width: 500px; height: auto;">
           <p class="has-text-centered" style="margin-top: 15px; font-size: 12px; color: #666;">More efficient: Fewer environment resets required and less overall human teleoperator time in constrained spaces.</p>
         </div>
 
         <!-- Right side - image with caption -->
         <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center;">
-          <img src="static/images/transparent_teleop_figure.png" alt="Right Image" style="width: 80%; max-width: 400px; height: auto;">
-          <p class="has-text-centered" style="margin-top: 15px; font-size: 12px; color: #666;">More intuitive: DexWrist's human-like kinematics and design collect shorter trajectorie and more natural behavior for manipulation in constrained, human-centric environments.</p>
+          <img src="static/images/transparent_teleop_figure.png" alt="Right Image" style="width: 80%; max-width: 500px; height: auto;">
+          <p class="has-text-centered" style="margin-top: 15px; font-size: 12px; color: #666;">More intuitive: DexWrist's human-like kinematics and design collect shorter trajectories and more natural behavior for manipulation in constrained, human-centric environments.</p>
         </div>
       </div>
     </div>
@@ -400,7 +400,11 @@
 <!--End BibTex citation -->
 
 
-  <footer class="footer">
+  <div style="text-align: center; margin-top: 20px; margin-bottom: 20px;">
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeKY6ytECnUhm9cvhBMHQg4BA9cfU0vOAlzGBlCn1N8VDJ8ZA/viewform?usp=sharing&ouid=100835751114693391084" target="_blank" style="background: #007bff; color: white; border: 2px solid #007bff; padding: 12px 24px; border-radius: 6px; font-size: 16px; font-weight: 600; text-decoration: none; display: inline-block; transition: all 0.3s ease; font-family: 'Google Sans', sans-serif;" onmouseover="this.style.background='#0056b3'; this.style.transform='translateY(-1px)'" onmouseout="this.style.background='#007bff'; this.style.transform='translateY(0)'"> Join Waitlist </a>
+  </div></div>
+
+  <!-- <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-8">
@@ -414,7 +418,7 @@
       </div>
     </div>
   </div>
-</footer>
+</footer> -->
 
 <!-- Statcounter tracking code -->
 
