--- a/index.html
+++ b/index.html
@@ -164,7 +164,15 @@
   <h1 style="text-align: center;">Why DexWrist?</h1>
   <div style="font-size: 3em; color: #666; line-height: 1; margin-bottom: 10px;">"</div>
   <div style="margin-left: 40px; line-height: 1.2; margin-bottom: 10px;">
-    Recent prosthetics investigations, however, have shown that increased dexterity in wrist prostheses may contribute more to manipulation capacity than a highly dexterous terminal device with limited wrist capability.<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8624352" target="_blank" style="color: blue;"> [1] </a>
+    <!-- Recent prosthetics investigations, however, have shown that increased dexterity in wrist prostheses may contribute more to manipulation capacity than a highly dexterous terminal device with limited wrist capability.<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8624352" target="_blank" style="color: blue;"> [1] </a> -->
+     The spatial orientation of an end-effector such as a hand or
+    a gripper is closely tied to its ability to perform a desired
+    task, and nearly all robotic and prosthetic arms incorporate some
+    type of wrist for this purpose. Yet both the academic and industrial research communities have tended to place more focus on
+hand/gripper development than that of wrist systems. Recent
+prosthetics investigations, however, have shown that increased
+dexterity in wrist prostheses may contribute more to manipulation capacity than a highly dexterous terminal device with
+limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8624352" target="_blank" style="color: blue;"> [1] </a>
   </div>
   <div style="font-size: 3em; color: #666; line-height: 1; text-align: right;">"</div>
 </div>
@@ -206,13 +214,13 @@
       <div style="display: flex; align-items: flex-start; gap: 10px; flex-wrap: wrap;">
         <!-- Left side - image with caption -->
         <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center;">
-          <img src="static/images/reset_fitted_background_is-light.png" alt="Left Image" style="width: 80%; max-width: 500px; height: auto;">
+          <img src="static/images/reset_fitted_background_is-light.png" alt="Left Image" style="width: 100%; max-width: 500px; height: auto;">
           <p class="has-text-centered" style="margin-top: 15px; font-size: 12px; color: #666;">More efficient: Fewer environment resets required and less overall human teleoperator time in constrained spaces.</p>
         </div>
 
         <!-- Right side - image with caption -->
         <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center;">
-          <img src="static/images/transparent_teleop_figure.png" alt="Right Image" style="width: 80%; max-width: 500px; height: auto;">
+          <img src="static/images/transparent_teleop_figure.png" alt="Right Image" style="width: 70%; max-width: 500px; height: auto;">
           <p class="has-text-centered" style="margin-top: 15px; font-size: 12px; color: #666;">More intuitive: DexWrist's human-like kinematics and design collect shorter trajectories and more natural behavior for manipulation in constrained, human-centric environments.</p>
         </div>
       </div>
